# ActPlane

./: .mcp.json  CLAUDE.md  LICENSE  Makefile  README.md  README.zh-CN.md  actplane.yaml  dockerfile
bpf/: .gitignore  Cargo.toml  Makefile  README.md  README.zh-CN.md  browsertrace.bpf.c  browsertrace.c  browsertrace.h  process  process.bpf.c  process.c  process.h  process_filter.h  process_new.c  process_new.h  sslsniff.c  stdiocap.c  taint.example.yaml  taint.h  taint_config.h  taint_engine.bpf.h  test_process_filter.c  test_process_utils.c  test_taint  test_taint.c
bpf/process_ext/: bpf_cow.h  bpf_fs.h  bpf_mem.h  bpf_net.h  bpf_signals.h  bpf_write.h  map_flush.h  mem_info.h  resource_sampler.h
bpf/src/: capability.rs  lib.rs
bpf/tests/: test_process_new_header.c  test_process_new_map_flush.c  test_process_new_mem_info.c
bpf/tests/bpf/: bpf.h  libbpf.h
collector/: Cargo.toml  README.md  README.zh-CN.md  build.rs
collector/src/: binary_extractor.rs  config.rs  doctor.rs  feedback.rs  main.rs  mcp.rs  policy.rs  runtime.rs  setup.rs
collector/src/dsl/: ast.rs  lower.rs  mod.rs  parse.rs
collector/src/framework/: binary_extractor.rs  mod.rs
collector/src/framework/analyzers/: auth_header_remover.rs  common.rs  event.rs  file_logger.rs  http_filter.rs  http_parser.rs  mod.rs  output.rs  sse_processor.rs  sse_processor_tests.rs  ssl_filter.rs  timestamp_normalizer.rs
collector/src/framework/core/: events.rs  mod.rs  timestamp.rs
collector/src/framework/runners/: agent.rs  common.rs  fake.rs  mod.rs  ssl.rs  stdio.rs  system.rs
collector/src/server/: mod.rs  web.rs
collector/test/: policy-corpus.sh
collector/test/policies/: 15_domain_bindings.yaml  21_domain_review_optout.yaml  22_domain_promote_default.yaml  23_domain_single_auto_select.yaml  24_domain_session_auto_select.yaml
collector/test/policies/invalid/: 01_mixed_legacy_and_domains.yaml  02_unknown_rule.yaml  03_disable_locked.yaml  04_disable_non_default.yaml  05_domain_cycle.yaml  06_ambiguous_domain.yaml  07_empty_rule_body.yaml
collector/tests/: cli_ux.rs  system_runner_test.rs
docs/: eval.md  (+14 more)
(+482 files in other folders)
