[package]
name = "actplane"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "process", "io-util", "time"] }
tempfile = "3.10"
env_logger = "0.10"
