[package]
name = "actplane"
version = "0.1.5"
edition = "2024"
description = "Programmable OS-level policy engine for AI agent harnesses — compiles workflow rules into eBPF information-flow policies with corrective feedback."
license = "MIT"
repository = "https://github.com/eunomia-bpf/ActPlane"
readme = "../README.md"
keywords = ["ebpf", "ai-agent", "guardrails", "policy-engine", "runtime-enforcement"]
categories = ["command-line-utilities"]

[[bin]]
name = "actplane"
path = "src/main.rs"

[dependencies]
ebpf-ifc-engine = { version = "0.1.5", path = "../bpf" }
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "signal", "io-std"] }
tempfile = "3.10"
env_logger = "0.10"
libc = "0.2"
rmcp = { version = "1", features = ["server", "transport-io"] }
